# passforge

./: Cargo.toml  README.md
benches/: password_generator_benchmarks.rs  single_vs_multi_threaded_password_gen.rs
examples/: custom_evaluator.rs
src/: config.rs  error.rs  generator.rs  lib.rs  strength_evaluator.rs
src/generator/: passphrase.rs  password.rs
src/strength_evaluator/: zxcvbn_analysis.rs
tests/: cli_tests.rs  library_api_tests.rs
