[package]
name = "passgen"
version = "0.6.0"
edition = "2021"
author = "Raka Schipperheijn"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.64"
zxcvbn = "3.1.0"

[dev-dependencies]
criterion = "0.3"
rayon = "1.5"

[[bench]]
name = "single_vs_multi_threaded_password_gen"
harness = false
