[package]
name = "passforge"
version = "0.1.1"
authors = ["Raka Schipperheijn raka@rpkschipperheijn.com"]
edition = "2021"
description = "A robust and flexible CLI password generator."
readme = "README.md"
license = "MIT"
repository = "https://github.com/RakaPKS/passforge"
keywords = ["password", "generator", "cli", "security", "cryptography"]
categories = ["command-line-utilities", "cryptography", "authentication"]

[dependencies]
clap = { version = "^4.5.18", features = ["derive"] }
rand = "^0.8.5"
thiserror = "^1.0.64"
zxcvbn = "^3.1.0"

[dev-dependencies]
criterion = "^0.3"
rayon = "^1.5"
assert_cmd = "^2.0"
predicates = "^2.1"

[[bench]]
name = "password_generator_benchmarks"
harness = false


[[bench]]
name = "single_vs_multi_threaded_password_gen"
harness = false
